// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`basic detect changes (bun.lock) 1`] = `
"{
  "lockfileVersion": 1,
  "workspaces": {
    "": {
      "name": "catalog-basic-2",
    },
    "packages/pkg1": {
      "name": "pkg1",
      "dependencies": {
        "a-dep": "catalog:a",
        "no-deps": "catalog:",
      },
    },
  },
  "catalog": {
    "no-deps": "2.0.0",
  },
  "catalogs": {
    "a": {
      "a-dep": "1.0.1",
    },
  },
  "packages": {
    "a-dep": ["a-dep@1.0.1", "http://localhost:1234/a-dep/-/a-dep-1.0.1.tgz", {}, "sha512-6nmTaPgO2U/uOODqOhbjbnaB4xHuZ+UB7AjKUA3g2dT4WRWeNxgp0dC8Db4swXSnO5/uLLUdFmUJKINNBO/3wg=="],

    "no-deps": ["no-deps@2.0.0", "http://localhost:1234/no-deps/-/no-deps-2.0.0.tgz", {}, "sha512-W3duJKZPcMIG5rA1io5cSK/bhW9rWFz+jFxZsKS/3suK4qHDkQNxUTEXee9/hTaAoDCeHWQqogukWYKzfr6X4g=="],

    "pkg1": ["pkg1@workspace:packages/pkg1"],
  }
}
"
`;

exports[`basic detect changes (bun.lock) 2`] = `
"{
  "lockfileVersion": 1,
  "workspaces": {
    "": {
      "name": "catalog-basic-2",
    },
    "packages/pkg1": {
      "name": "pkg1",
      "dependencies": {
        "a-dep": "catalog:a",
        "no-deps": "catalog:",
      },
    },
  },
  "catalog": {
    "no-deps": "1.0.0",
  },
  "catalogs": {
    "a": {
      "a-dep": "1.0.1",
    },
  },
  "packages": {
    "a-dep": ["a-dep@1.0.1", "http://localhost:1234/a-dep/-/a-dep-1.0.1.tgz", {}, "sha512-6nmTaPgO2U/uOODqOhbjbnaB4xHuZ+UB7AjKUA3g2dT4WRWeNxgp0dC8Db4swXSnO5/uLLUdFmUJKINNBO/3wg=="],

    "no-deps": ["no-deps@1.0.0", "http://localhost:1234/no-deps/-/no-deps-1.0.0.tgz", {}, "sha512-v4w12JRjUGvfHDUP8vFDwu0gUWu04j0cv9hLb1Abf9VdaXu4XcrddYFTMVBVvmldKViGWH7jrb6xPJRF0wq6gw=="],

    "pkg1": ["pkg1@workspace:packages/pkg1"],
  }
}
"
`;

exports[`basic detect changes (bun.lock) 3`] = `
"{
  "lockfileVersion": 1,
  "workspaces": {
    "": {
      "name": "catalog-basic-2",
    },
    "packages/pkg1": {
      "name": "pkg1",
      "dependencies": {
        "a-dep": "catalog:a",
        "no-deps": "catalog:",
      },
    },
  },
  "catalog": {
    "no-deps": "1.0.0",
  },
  "catalogs": {
    "a": {
      "a-dep": "1.0.10",
    },
  },
  "packages": {
    "a-dep": ["a-dep@1.0.10", "http://localhost:1234/a-dep/-/a-dep-1.0.10.tgz", {}, "sha512-NeQ6Ql9jRW8V+VOiVb+PSQAYOvVoSimW+tXaR0CoJk4kM9RIk/XlAUGCsNtn5XqjlDO4hcH8NcyaL507InevEg=="],

    "no-deps": ["no-deps@1.0.0", "http://localhost:1234/no-deps/-/no-deps-1.0.0.tgz", {}, "sha512-v4w12JRjUGvfHDUP8vFDwu0gUWu04j0cv9hLb1Abf9VdaXu4XcrddYFTMVBVvmldKViGWH7jrb6xPJRF0wq6gw=="],

    "pkg1": ["pkg1@workspace:packages/pkg1"],
  }
}
"
`;
